--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="back-to-top-btn"><i class="fa fa-angle-double-up"></i>
     </div>
 
-    <div class="contener">
+    <div id="contener">
         <div class="header">
             <div id="menu">
                 <input type="checkbox" id="openmenu">
@@ -26,11 +26,11 @@
                     <div class="spinner bottom"></div>
                 </label>
                 <ul class="navigation">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contener">HOME</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#Service">Service</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
 
@@ -53,7 +53,7 @@
     <!----- Layout page end ------->
 
     <div class="second-sec">
-        <p class="about">ABOUT</p>
+        <p id="about">ABOUT</p>
         <h1 class="introduc">Let me introduce myself.</h1><br>
         <div class="images"><img class="first-img" src="./images/my-pic.jpeg">
 
@@ -171,7 +171,7 @@
 
     <div class="heder-2">
         <div class="section-2">
-            <p class="portfolio">PORTFOLIO</p>
+            <p id="portfolio">PORTFOLIO</p>
             <h1 class="mywork">Check Out Some of My Work.</h1><br>
             <p class="work">Some of my recent work</p>
         </div>
